@@ -71,6 +71,7 @@ version <next>:
 - spectral extension support in the E-AC-3 decoder
 - unsharp video filter
 - RTP hinting in the mov/3gp/mp4 muxer
+- WebM support in Matroska demuxer
 
 
 
